# RecModel

./: .gitignore  DIN.py  DeepFM.py  ModelInterface.py  README.md  XDeepFM.py  preprocess.py  pyproject.toml  requirements.txt  train.sh  utils.py
conf/: common.conf  common.yaml  dfm.yml  din.yml  model.yaml  parquet_libsvm.yaml  preprocess.conf  structured_mmoe.yaml  xdfm.yml
core/: __init__.py  data.py  main.py  model.py  structure.py
data/: rich_feature_schema.json  rich_test.jsonl  rich_train.jsonl  rich_valid.jsonl  test.libsvm  train.libsvm  valid.libsvm
scripts/: train.sh
src/: DataProcessor.py  DeepFM.py  ModelInterface.py  utils.py
