[project]
name = "deepfm-pytorch-recmodel"
version = "0.1.0"
description = "PyTorch DeepFM training template for libsvm recommendation data."
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch==2.11.0",
    "torchvision==0.26.0",
    "torchaudio==2.11.0",
    "PyYAML>=6.0",
    "tensorboard>=2.20",
    "pyarrow>=16.0",
]
